--- a/package.json
+++ b/package.json
@@ -1,50 +1,25 @@
 {
-  "name": "swiss-army",
-  "version": "0.0.0",
-  "description": "Data tools",
-  "homepage": "https://github.com/sdulaney/swiss-army",
-  "author": {
-    "name": "Stewart Dulaney",
-    "email": "sdulaney@users.noreply.github.com",
-    "url": "https://github.com/sdulaney"
-  },
-  "files": [
-    "dist"
-  ],
-  "main": "dist/index.js",
-  "keywords": [
-    ""
-  ],
-  "devDependencies": {
-    "eslint": "^3.1.1",
-    "eslint-config-xo-space": "^0.15.0",
-    "babel-eslint": "^6.1.2",
-    "eslint-plugin-babel": "^3.3.0",
-    "gulp": "^3.9.0",
-    "gulp-eslint": "^3.0.1",
-    "gulp-exclude-gitignore": "^1.0.0",
-    "gulp-line-ending-corrector": "^1.0.1",
-    "gulp-istanbul": "^1.0.0",
-    "gulp-mocha": "^3.0.1",
-    "gulp-plumber": "^1.0.0",
-    "gulp-nsp": "^2.1.0",
-    "gulp-babel": "^6.1.2",
-    "del": "^2.0.2",
-    "babel-core": "^6.11.4",
-    "babel-register": "^6.9.0",
-    "babel-preset-es2015": "6.9.0",
-    "isparta": "^4.0.0"
-  },
-  "eslintConfig": {
-    "extends": "xo-space",
-    "env": {
-      "mocha": true
-    }
-  },
-  "repository": "sdulaney/swiss-army",
+  "name": "email-list",
+  "version": "1.0.0",
+  "description": "Email list",
+  "main": "index.js",
   "scripts": {
-    "prepublish": "gulp prepublish",
-    "test": "gulp"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sdulaney/email-list.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sdulaney/email-list/issues"
+  },
+  "homepage": "https://github.com/sdulaney/email-list#readme",
+  "dependencies": {
+    "email-regex": "^1.0.0",
+    "google-auth-library": "^0.9.10",
+    "googleapis": "^14.2.0",
+    "underscore": "^1.8.3"
+  }
 }
