--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   "homepage": "https://github.com/sdulaney/email-list#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "cached-request": "^1.1.0",
     "cheerio": "^0.22.0",
     "email-regex": "^1.0.0",
     "express": "^4.14.0",
     "j": "^0.4.3",
     "method-override": "^2.3.7",
+    "mongodb": "^2.2.12",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
     "underscore": "^1.8.3"
