--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^2.2.12",
     "mongoose": "^4.7.1",
     "morgan": "^1.7.0",
+    "phantomjs-prebuilt": "^2.1.13",
     "underscore": "^1.8.3"
   }
 }
